	* sybase: added support for unichar types, strip trailing blanks from 
	  CHAR columns, fixed off-by-one bug in datetime conversions, mapped
	  DECIMAL,NUMERIC to string to avoid losing data, fixed string encoding
	  bugs, fixed transaction management model to fit qore's by enabling
	  chained transaction mode
	* fixed DECIMAL->string conversions for FreeTDS (returns DECIMAL as
	  float)

2006.05.22: David Nichols
	* fixed select method and encodings for sybase driver

2006.05.19: David Nichols
	* more "char *" -> "const char *" API header updates
	* fixed a bug in the new thread variable stack handling
	* added DatasourcePool class for transparent Datasource connection
	  pooling.  Use the DatasourcePool class like the Datasource class;
	  when you enter a transaction, a Datasource is automatically allocated
	  to the thread, and released when the transaction is committed or 
	  rolled back.  Allocated connections are tracked with Qore's thread
	  resource tracking and failure to release a connection before a thread
	  terminates will result in an exception being thrown and the connection
	  being automatically returned to the pool.
	* new methods: Datasource::selectRow() and Datasource::vselectRow()
	* fixed some exception stack trace bugs (double entries, incorrect 
	  position info) in the new "on-demand" stack trace solution
	* fixed class name reporting for exceptions in derived classes
	* fixed a bug in the scanner parsing the '/' operator and regular 
	  expressions
	* fixed a bug in the scanner where eof in a block comment would cause a
	  crash

2006.05.18: David Nichols
	* do not mask SIGPROF when profiling is enabled
	* more "char *" -> "const char *" API header updates

2006.05.17: David Nichols
	* eliminated global lock for deadlock detection
	* use a vector instead of a deque for VLock lock tracking (tests show a
	  vector is slightly faster than a deque for this usage)
	* added another example script to demonstrate multiple inheritance 